--- a/CSS_ASSIGNMENT/index.html
+++ b/CSS_ASSIGNMENT/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1>Welcome to My Portfolio</h1>
+      <h1>Omotoyosi Awotunde <br>ALT/SOE/024/0530</h1>
       <p class="subheading">Here are my assignments</p>
     </header>
 
