--- a/CSS_ASSIGNMENT/index.html
+++ b/CSS_ASSIGNMENT/index.html
@@ -15,37 +15,37 @@
     <main>
       <section class="assignments">
         <div class="assignment-card">
-          <a href="/Assignment1/index.html" target="_blank" class="assignment-link">
+          <a href="Assignment1/index.html" target="_blank" class="assignment-link">
             <h2>Assignment 1</h2>
             <p>Click here to view Assignment 2.</p>
           </a>
         </div>
         <div class="assignment-card">
-          <a href="/Assignment2/index.html" target="_blank" class="assignment-link">
+          <a href="Assignment2/index.html" target="_blank" class="assignment-link">
             <h2>Assignment 2</h2>
             <p>Click here to view Assignment 2.</p>
           </a>
         </div>
         <div class="assignment-card">
-          <a href="/Assignment3/index.html" target="_blank" class="assignment-link">
+          <a href="Assignment3/index.html" target="_blank" class="assignment-link">
             <h2>Assignment 3</h2>
             <p>Click here to view Assignment 3.</p>
           </a>
         </div>
         <div class="assignment-card">
-            <a href="/Assignment4/index.html" target="_blank" class="assignment-link">
+            <a href="Assignment4/index.html" target="_blank" class="assignment-link">
               <h2>Assignment 4</h2>
               <p>Click here to view Assignment 4.</p>
             </a>
           </div>
           <div class="assignment-card">
-            <a href="/Assignment5/index.html" target="_blank" class="assignment-link">
+            <a href="Assignment5/index.html" target="_blank" class="assignment-link">
               <h2>Assignment 5</h2>
               <p>Click here to view Assignment 5.</p>
             </a>
           </div>
           <div class="assignment-card">
-            <a href="/Assignment6/index.html" target="_blank" class="assignment-link">
+            <a href="Assignment6/index.html" target="_blank" class="assignment-link">
               <h2>Assignment 6</h2>
               <p>Click here to view Assignment 6.</p>
             </a>
